--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "jspdf": "^3.0.4",
-    "jspdf-autotable": "^5.0.2",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.309.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
