PR and GRN added and also all the files refactored

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # INVENTORY STOCK MANAGEMENT ENVIRONMENT VARIABLES .ENV.LOCAL
 VITE_APP_BASE_URL = http://localhost:5000
+# VITE_APP_BASE_URL = https://hypoxanthic-ghastful-idell.ngrok-free.dev
 # VITE_APP_BASE_URL = https://stock-inventory-management-backend.vercel.app
